--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "cantata-node"]
 	path = cantata-node
-	url = git@github.com:bylee/cantata-node.git
+	url = https://github.com/yoonky/cantata-node.git
 [submodule "cantata-web"]
 	path = cantata-web
 	url = git@github.com:bylee/cantata-web.git
