--- a/build
+++ b/build
@@ -1,10 +1,14 @@
 #!/bin/sh
 
-DIR_TARGET=target
+SCRIPT=`readlink -f $0`
+DIR_HOME=`dirname $SCRIPT`
+DIR_TARGET=$DIR_HOME/target
+echo "Target: $DIR_TARGET"
 rm -rf $DIR_TARGET
 
 PROJECT_NODE=cantata-node
-TARGET_NODE=$DIR_TARGET
+TARGET_NODE=$DIR_TARGET/res
+mkdir -p $TARGET_NODE
 
 PROJECT_WEB=cantata-web
 TARGET_WEB=$DIR_TARGET/res
@@ -15,19 +19,25 @@ TARGET_JSBIND=$TARGET_WEB/routes
 PROJECT_NATIVE=cantata-native
 TARGET_NATIVE=$DIR_TARGET
 
-git clone git@github.com:bylee/$PROJECT_NODE.git
-git clone git@github.com:bylee/$PROJECT_WEB.git
-git clone git@github.com:bylee/$PROJECT_JSBIND.git
-git clone git@github.com:bylee/$PROJECT_NATIVE.git
+#git clone git@github.com:bylee/$PROJECT_NODE.git
+#git clone git@github.com:bylee/$PROJECT_WEB.git
+#git clone git@github.com:bylee/$PROJECT_JSBIND.git
+#git clone git@github.com:bylee/$PROJECT_NATIVE.git
 
 mkdir -p $DIR_TARGET
-$PROJECT_NODE/build $TARGET_NODE
+cd $PROJECT_NODE
+./build --prefix=$TARGET_NODE
+cd ..
 $PROJECT_WEB/build $TARGET_WEB
 $PROJECT_JSBIND/build $TARGET_JSBIND
-$PROJECT_NATIVE/build $TARGET_NATIVE
+cd $PROJECT_NATIVE
+./build $TARGET_NATIVE
+cd ..
 
+export TIZEN_SDK=/home/mustafa/tizen-sdk
 # 사인( Sign )
-
-
 # 패키징( Packaging )
+$TIZEN_SDK/tools/smart-build-interface/bin/sbi action tizen-emulator-2.0.cpp.partner_gcc45.i386.cpp.app -- buildpackage -BUILD_DIR="$DIR_TARGET/build" -ARCH=i386 -PKG_TYPE=TPK -PKG_NAME=XjBNbH9LsP -PRJ_NAME=cantata -PKG_VER=1.0.0 -SIGN_CERT_DIR="$TIZEN_SDK/tools/certificate-generator/certificates/developer/tizen-developer-ca.cer" -SIGN_AUTHOR_KEY="$DIR_HOME/tizen.p12" -SIGN_AUTHOR_PWD="tizen" -SIGN_DIST1_KEY="$TIZEN_SDK/tools/certificate-generator/certificates/distributor/tizen-distributor-signer.p12" -SIGN_DIST1_PWD="tizenpkcs12passfordsigner" -SIGN_DIST1_CA="$TIZEN_SDK/tools/certificate-generator/certificates/distributor/tizen-distributor-ca.cer" -SIGN_DIST2_KEY="" -SIGN_DIST2_PWD="" -SIGN_DIST2_CA="" -SIGN_DIST2_ROOT=""
+
+
 
